# hailo-apps-infra

./: README.md  download_resources.sh  setup.py
cpp/: meson.build  scrfd.cpp
hailo_apps_infra/: detection_pipeline.py  face_recognition_pipeline.py  gstreamer_app.py  gstreamer_helper_pipelines.py  hailo_rpi_common.py  instance_segmentation_pipeline.py  pose_estimation_pipeline.py  save_faces.py
hailo_apps_infra/face_recognition/: download_resources.sh  face_recognition_pipeline.py
tests/: test_sanity_check.py
